# notwallet

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy-desktop.yaml
NotWalletWatchApp/NotWalletWatchApp Watch App/: NotWalletWatchAppApp.swift
NotWalletWatchApp/NotWalletWatchApp.xcodeproj/: project.pbxproj
_crates/: Cargo.toml
_crates/wallet-constants/: Cargo.toml
_crates/wallet-core/: Cargo.toml
_crates/wallet-core-http/: Cargo.toml
_crates/wallet-core-model/: Cargo.toml
_crates/wallet-core-network/: Cargo.toml
_crates/wallet-core-rpc/: Cargo.toml
_crates/wallet-kit/: Cargo.toml
_crates/wallet-network/: Cargo.toml
app/: page.tsx
app/_components/: android-tv-layout.tsx  layout-with-bottom-bar.tsx  layout-with-menu-bar.tsx
app/components/: layout-with-bottom-bar.tsx
app/dao/: page.tsx
app/home/: page.tsx
app/lib/: commands.ts
app/settings/: page.tsx
app/wallet/: page.tsx
crates/: .gitignore  Cargo.toml
crates/wallet-core/: Cargo.toml
crates/wallet-core-model/: Cargo.toml
crates/wallet-kit/: Cargo.toml
crates/wallet-kit-v3/: Cargo.toml  uniffi.toml
docs/: release-ios.md  solana-local-development.md
lib/: commands.ts  helper.ts
lib/components/: bottom-tab-bar.tsx  page-children-title-bar.tsx  page-title-bar.tsx  token-icons.tsx
lib/crate/: generated.ts
src/: App.jsx  App.tsx  LanguageContext.jsx  i18n.js  i18n.ts
src-tauri/: Cargo.toml  tauri.appstore.conf.json  tauri.conf.json  tauri.prod-android-playstore.conf.json  tauri.prod-ios-appstore.conf.json  tauri.prod-linux.conf.json  tauri.prod-macos-appstore.conf.json  tauri.prod-macos.conf.json  tauri.prod-windows.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: android.json  mobile.json
src-tauri/gen-override/android/app/src/main/: AndroidManifest.xml
src-tauri/src/: lib.rs
src-tauri/src/constants/: address.rs  mod.rs  network.rs  rpc.rs  store.rs
src-tauri/src/model/: mod.rs  settings_debug.rs
src-tauri/src/network/: airdrop.rs  check_pubkey.rs  client.rs
src-tauri/src/onramp/: commands.rs  stripe.rs
src-tauri/src/setup/: command_start_server.rs  mod.rs
src-tauri/src/swap/: commands.rs
src-tauri/src/wallet/: check_pubkey.rs  command_balance.rs  command_get_bach_balance.rs  command_get_sol_balance.rs  command_get_treasury_bach_balance.rs  command_get_treasury_sol_balance.rs  command_other_assets_balance.rs  command_send_token.rs  command_wallet_token_list.rs  commands.rs  mod.rs  sign.rs
src/components/: AnimatedPage.jsx  Navbar.jsx  Navbar.tsx
src/pages/: Home.jsx  Profile.jsx
watchOSApp/NotWalletWatchApp.xcodeproj/: project.pbxproj
wearOSApp/app/: build.gradle.kts
(+117 files in other folders)
